Fixed rename message on mobile

--- a/css/theme.less
+++ b/css/theme.less
@@ -72,6 +72,11 @@ header {
   }
 }
 
+.rename {
+  margin-top: 70px;
+  margin-bottom: -20px;
+}
+
 .features {
   margin-top: 70px;
   margin-bottom: -20px;
